--- a/index-engels.html
+++ b/index-engels.html
@@ -51,7 +51,7 @@
                         <li><a href="#about" data-after="Contact">Github</a></li>
                         <li><a href="#formulier2" data-after="Contact">Form</a></li>
                         <li><a href="#contact" data-after="Contact">Contact</a></li>
-                        <li><a href="index-engels.html" data-after="Contact">Netherlands</a></li>
+                        <li><a href="index.html" data-after="Contact">Netherlands</a></li>
                     </ul>
                 </div>
         </div>
