--- a/index.html
+++ b/index.html
@@ -285,7 +285,6 @@
                     <div class="fcf-credit" id="fcf-credit">
                         <a href="https://www.designhd.nl" target="_blank">Designhd.nl</a>
                     </div>
-
                 </form>
             </div>
 
@@ -342,12 +341,13 @@
                                 alt="Icoontje van github" /></a>
                     </div>
                     <div class="social-item">
-                        <a href="https://www.linkedin.com/in/halil-dogan-9016b91a4/"><img
-                                src="https://img.icons8.com/bubbles/100/000000/linkedin.png"
+                        <a href="https://www.linkedin.com/in/halil-dogan-9016b91a4/">
+                            <img src="https://img.icons8.com/bubbles/100/000000/linkedin.png"
                                 alt="Icoontje van linkedin" /></a>
                     </div>
                     <div class="social-item">
-                        <a href="https://www.ma-web.nl/"><img src="https://img.icons8.com/bubbles/100/undefined/podcast.png"
+                        <a href="https://www.ma-web.nl/">
+                            <img src="https://img.icons8.com/bubbles/100/undefined/podcast.png"
                                 alt="Icoontje van twitter" /></a>
                     </div>
                 </div>
